# reversi_rl

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  pyproject.toml  reversi_rl.pyi
agent/: __init__.py  env.py  run.py
src/: lib.rs
test/: conftest.py  test_env.py
