[project]
name = "reversi-rl-app"
version = "0.1.0"
description = "Reinforcement‑learning playground for Reversi with Rust core"
authors = [
    {name = "reiya0104",email = "reiya010408@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "maturin[patchelf] (>=1.8.3,<2.0.0)",
    "gymnasium (>=1.1.1,<2.0.0)"
]

[tool]
[tool.poetry]
[tool.poetry.group.dev]
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"
ruff = "^0.11.6"

[build-system]
requires = ["maturin>=1.8.3,<2.0.0"]
build-backend = "maturin"
